--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "zaphr-portal",
   "private": true,
-  "version": "1.0.3",
+  "version": "1.0.5",
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000",
-    "typecheck": "tsc --noEmit"
+    "start": "next start -p 3000"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.51.1",
